--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 		#mashaAdventureCanvas {
 			border-style:solid;
+			border-width:1px;
 			border-color:#000;
 			width: 800px;
 		}
@@ -30,6 +31,8 @@
 	<script src="src/controllers/TitleController.js"></script>
 	
 	<script src="src/ui/SimpleButton.js"></script>
+	
+	<script src="src/go/Player.js"></script>
 	
 	
 	<script src="src/MashaAdventure.js"></script>
