--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="utf-8">
     <title></title>
 	<style type="text/css">
-		#mashaAdventureCanvas {
+		#root-canvas {
 			border-style:solid;
 			border-width:1px;
 			border-color:#000;
-			width: 800px;
+			/* this ensures no focus glow on the canvas*/
+			outline:none;
 		}
 	</style>
 
@@ -18,28 +19,20 @@
 	<script src="../accessibility/Scan.js"></script>
 	<script src="../accessibility/Switches.js"></script>
 	
-	<script src="src/views/View.js"></script>
-	<script src="src/views/GameView.js"></script>
-	<script src="src/views/RewardView.js"></script>
-	<script src="src/views/SplashView.js"></script>
-	<script src="src/views/TitleView.js"></script>
-	
-	<script src="src/controllers/Controller.js"></script>
-	<script src="src/controllers/GameController.js"></script>
-	<script src="src/controllers/RewardController.js"></script>
-	<script src="src/controllers/SplashController.js"></script>
-	<script src="src/controllers/TitleController.js"></script>
+	<script src="src/utils/bind.js"></script>
+	<script src="src/utils/common.js"></script>
 	
 	<script src="src/ui/SimpleButton.js"></script>
 	
 	<script src="src/go/Player.js"></script>
-	
+	<script src="src/Scene.js"></script>
 	
 	<script src="src/MashaAdventure.js"></script>
 </head>
 <body>
-	<div id="rootDiv">
-		<canvas width='800' height='600' id='mashaAdventureCanvas'>
+	<div id="root-div">
+		<canvas width='1024' height='768' id='root-canvas'>
 	</div>
+	<input id="input-field"></input>
 </body>
 </html>
