1. Add Vector2D class 2. Add GameInput class

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
 	<script src="src/utils/bind.js"></script>
 	<script src="src/utils/common.js"></script>
 	
+	<script src="src/math/Vector2D.js"></script>
+	
 	<script src="src/ui/SimpleButton.js"></script>
 	
 	<script src="src/go/Player.js"></script>
+	<script src="src/GameInput.js"></script>
 	<script src="src/Scene.js"></script>
 	
 	<script src="src/MashaAdventure.js"></script>
 </head>
 <body>
 	<div id="root-div">
-		<canvas width='1024' height='768' id='root-canvas'>
+		<canvas width='800' height='600' id='root-canvas' tabindex="-1">
 	</div>
 	<input id="input-field"></input>
 </body>
