--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	<script src="src/GameInput.js"></script>
 	<script src="src/Scene.js"></script>
 	
+	<script src="assets/data/animations.js"></script>
+	
 	<script src="src/MashaAdventure.js"></script>
 </head>
 <body>
