Working on the naive version of the camera transformation. Cannot easily use matrix to transform because of lack support from easeljs.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
 	
 	<script src="src/ui/SimpleButton.js"></script>
 	
+	<script src="src/go/GameObject.js"></script>
 	<script src="src/go/Player.js"></script>
+	<script src="src/go/Building.js"></script>
+	
+	<script src="src/layers/Layer.js"></script>
+	<script src="src/layers/BuildingLayer.js"></script>
+	
 	<script src="src/GameInput.js"></script>
 	<script src="src/Scene.js"></script>
+	<script src="src/Camera.js"></script>
 	
 	<script src="assets/data/animations.js"></script>
 	
