Basic implementation of building generator.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script src="../accessibility/Scan.js"></script>
 	<script src="../accessibility/Switches.js"></script>
 	
+	<script src="src/generators/BuildingGenerator.js"></script>
+
 	<script src="src/utils/bind.js"></script>
 	<script src="src/utils/common.js"></script>
 	
@@ -30,8 +32,7 @@
 	<script src="src/go/Player.js"></script>
 	<script src="src/go/Building.js"></script>
 	
-	<script src="src/layers/Layer.js"></script>
-	<script src="src/layers/BuildingLayer.js"></script>
+	<script src="src/Layer.js"></script>
 	
 	<script src="src/GameInput.js"></script>
 	<script src="src/Scene.js"></script>
