--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 	<script src="src/go/Player.js"></script>
 	<script src="src/go/Building.js"></script>
 	
-	<script src="src/Layer.js"></script>
+	<script src="src/layers/Layer.js"></script>
+	<script src="src/layers/BuildingLayer.js"></script>
 	
 	<script src="src/GameInput.js"></script>
 	<script src="src/Scene.js"></script>
