--- a/index.html
+++ b/index.html
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!-- Consider specifying the language of your content by adding the `lang` attribute to <html> -->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
+
+    <!-- Use the .htaccess and remove these lines to avoid edge case issues.
+         More info: h5bp.com/i/378 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <title></title>
-	<style type="text/css">
-		#root-canvas {
-			border-style:solid;
-			border-width:1px;
-			border-color:#000;
-			/* this ensures no focus glow on the canvas*/
-			outline:none;
-		}
-	</style>
+    <meta name="description" content="">
 
+    <!-- Mobile viewport optimized: h5bp.com/viewport -->
+    <meta name="viewport" content="width=device-width">
 
-	<script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script>
-	<!-- <script src="http://code.createjs.com/movieclip-0.4.1.min.js"></script> -->
-	<script src="libs/greensock/TweenLite.js"></script>
-	<script src="../accessibility/Scan.js"></script>
-	<script src="../accessibility/Switches.js"></script>
-	
-	<script src="src/generators/BuildingGenerator.js"></script>
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
-	<script src="src/utils/bind.js"></script>
-	<script src="src/utils/common.js"></script>
-	
-	<script src="src/math/Vector2D.js"></script>
-	
-	<script src="src/ui/SimpleButton.js"></script>
-	
-	<script src="src/go/GameObject.js"></script>
-	<script src="src/go/Player.js"></script>
-	<script src="src/go/Building.js"></script>
-	
-	<script src="src/layers/Layer.js"></script>
-	<script src="src/layers/BuildingLayer.js"></script>
-	
-	<script src="src/GameInput.js"></script>
-	<script src="src/Scene.js"></script>
-	<script src="src/Camera.js"></script>
-	
-	<script src="assets/data/animations.js"></script>
-	
-	<script src="src/MashaAdventure.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+
+    <!-- All JavaScript at the bottom, except this Modernizr build.
+         Modernizr enables HTML5 elements & feature detects for optimal performance.
+         Create your own custom Modernizr build: www.modernizr.com/download/ -->
+    <script src="js/vendor/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
-	<div id="root-div">
-		<canvas width='800' height='600' id='root-canvas' tabindex="-1">
-	</div>
-	<input id="input-field"></input>
+    <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+         chromium.org/developers/how-tos/chrome-frame-getting-started -->
+    <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+
+
+
+
+    <!-- Add your site or application content here -->
+    <div id="root-div">
+        <canvas width='800' height='600' id='root-canvas' tabindex="-1">
+    </div>
+    <input id="input-field"></input>
+
+
+
+
+
+
+    <!-- JavaScript at the bottom for fast page loading: http://developer.yahoo.com/performance/rules.html#js_bottom -->
+
+    <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+    <!-- No jquery is used at the moment.
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
+    -->
+
+    <!-- scripts concatenated and minified via build script -->
+    <script src="js/vendor/greensock/TweenLite.js"></script>
+	<script src="../accessibility/Scan.js"></script>
+	<script src="../accessibility/Switches.js"></script>
+
+    <script src="js/plugins.js"></script>
+    <script type="text/javascript" data-main="js/MashaAdventure" src="js/vendor/require.js"></script>
+    <!-- end scripts -->
+
+    <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
+         mathiasbynens.be/notes/async-analytics-snippet -->
+ <!--   
+    <script>
+        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+-->
 </body>
 </html>
