--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
 
     <script src="js/plugins.js"></script>
     <script type="text/javascript" data-main="js/MashaAdventure" src="js/vendor/require.js"></script>
+    <script type="text/javascript">
+        requirejs.config({
+            config: {
+                urlArgs: (new Date()).getTime() + "" + Math.floor(Math.random()*10000)
+            }
+        });
+    </script>
     <!-- end scripts -->
 
     <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
