--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
 
     <script type="text/javascript" src="js/gridengine/Mat3.js"></script>
     <script type="text/javascript" src="js/gridengine/Vec2.js"></script>
-
     <script type="text/javascript" src="js/gridengine/Rect.js"></script>
     <script type="text/javascript" src="js/gridengine/AABB.js"></script>
-    <script type="text/javascript" src="js/gridengine/GameObject.js"></script>
     <script type="text/javascript" src="js/gridengine/DisplayObject.js"></script>
     <script type="text/javascript" src="js/gridengine/Bitmap.js"></script>
     <script type="text/javascript" src="js/gridengine/Container.js"></script>
     <script type="text/javascript" src="js/gridengine/Stage.js"></script>
-    <script type="text/javascript" src="js/gridengine/Camera.js"></script>
+    
+    <script type="text/javascript" src="js/game/Camera.js"></script>
+    <script type="text/javascript" src="js/game/GameObject.js"></script>
+    <script type="text/javascript" src="js/game/Earth.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
     <!-- end scripts -->
