--- a/index.html
+++ b/index.html
@@ -70,16 +70,21 @@
     <script type="text/javascript" src="js/gridengine/Vec2.js"></script>
     <script type="text/javascript" src="js/gridengine/Rect.js"></script>
     <script type="text/javascript" src="js/gridengine/AABB.js"></script>
+    <script type="text/javascript" src="js/gridengine/EventDispatcher.js"></script>
     <script type="text/javascript" src="js/gridengine/DisplayObject.js"></script>
     <script type="text/javascript" src="js/gridengine/Bitmap.js"></script>
     <script type="text/javascript" src="js/gridengine/Container.js"></script>
     <script type="text/javascript" src="js/gridengine/Stage.js"></script>
     
+    <script type="text/javascript" src="js/game/Scene.js"></script>
+    <script type="text/javascript" src="js/game/TitleScene.js"></script>
+    <script type="text/javascript" src="js/game/GameScene.js"></script>
     <script type="text/javascript" src="js/game/Camera.js"></script>
     <script type="text/javascript" src="js/game/GameObject.js"></script>
     <script type="text/javascript" src="js/game/Earth.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
+    
     <!-- end scripts -->
 
     <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
