--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
     <script type="text/javascript" src="js/gridengine/DisplayObject.js"></script>
     <script type="text/javascript" src="js/gridengine/Bitmap.js"></script>
     <script type="text/javascript" src="js/gridengine/Container.js"></script>
+    <script type="text/javascript" src="js/gridengine/Camera.js"></script>
     <script type="text/javascript" src="js/gridengine/Stage.js"></script>
     
     <script type="text/javascript" src="js/game/Scene.js"></script>
     <script type="text/javascript" src="js/game/TitleScene.js"></script>
     <script type="text/javascript" src="js/game/GameScene.js"></script>
-    <script type="text/javascript" src="js/game/Camera.js"></script>
     <script type="text/javascript" src="js/game/GameObject.js"></script>
     <script type="text/javascript" src="js/game/Earth.js"></script>
+    <script type="text/javascript" src="js/game/Building.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
     
