working on Animation

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
     <script type="text/javascript" src="js/gridengine/Rect.js"></script>
     <script type="text/javascript" src="js/gridengine/AABB.js"></script>
     <script type="text/javascript" src="js/gridengine/EventDispatcher.js"></script>
+    <script type="text/javascript" src="js/gridengine/SpriteSheet.js"></script>
     <script type="text/javascript" src="js/gridengine/DisplayObject.js"></script>
     <script type="text/javascript" src="js/gridengine/Bitmap.js"></script>
+    <script type="text/javascript" src="js/gridengine/Animation.js"></script>
     <script type="text/javascript" src="js/gridengine/Container.js"></script>
     <script type="text/javascript" src="js/gridengine/Camera.js"></script>
     <script type="text/javascript" src="js/gridengine/Stage.js"></script>
