Add accessibility.js submodule

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <!-- scripts concatenated and minified via build script -->
     <script src="js/vendor/greensock/TweenLite.js"></script>
-	<script src="../accessibility/Scan.js"></script>
-	<script src="../accessibility/Switches.js"></script>
+	<script src="js/accessibility.js/Scan.js"></script>
+	<script src="js/accessibility.js/Switches.js"></script>
 
     <script src="js/plugins.js"></script>
 
