1. Add javascript box2d library: Box2DWeb. 2. Use requestAnimFrame as game main loop. 3. Add stats.js

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
     -->
 
     <!-- scripts concatenated and minified via build script -->
-    <script src="js/vendor/greensock/TweenLite.js"></script>
+    <script type="text/javascript" src="js/vendor/greensock/TweenLite.js"></script>
+    <script type="text/javascript" src="js/vendor/stats.js"></script>
+    <script type="text/javascript" src="js/vendor/Box2dWeb-2.1.a.3.js"></script>
+
 	<script src="../accessibility/Scan.js"></script>
 	<script src="../accessibility/Switches.js"></script>
 
@@ -78,15 +81,19 @@
     <script type="text/javascript" src="js/gridengine/Container.js"></script>
     <script type="text/javascript" src="js/gridengine/Camera.js"></script>
     <script type="text/javascript" src="js/gridengine/Stage.js"></script>
+
+    <script type="text/javascript" src="js/game/data.js"></script>
     
     <script type="text/javascript" src="js/game/Scene.js"></script>
     <script type="text/javascript" src="js/game/TitleScene.js"></script>
     <script type="text/javascript" src="js/game/GameScene.js"></script>
     <script type="text/javascript" src="js/game/GameObject.js"></script>
-    <script type="text/javascript" src="js/game/Earth.js"></script>
+    <script type="text/javascript" src="js/game/Player.js"></script>
     <script type="text/javascript" src="js/game/Building.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
+
+    <script type="text/javascript" src="js/test.js"></script>
     
     <!-- end scripts -->
 
