Test Player physics

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <script type="text/javascript" src="js/game/data.js"></script>
     
+    <script type="text/javascript" src="js/game/b2BodyFactory.js"></script>
     <script type="text/javascript" src="js/game/Scene.js"></script>
     <script type="text/javascript" src="js/game/TitleScene.js"></script>
     <script type="text/javascript" src="js/game/GameScene.js"></script>
