--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script type="text/javascript" src="js/game/GameObject.js"></script>
     <script type="text/javascript" src="js/game/Player.js"></script>
     <script type="text/javascript" src="js/game/Building.js"></script>
+    <script type="text/javascript" src="js/game/ContactListener.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
 
