--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <script type="text/javascript" src="js/game/data.js"></script>
     
+    <script type="text/javascript" src="js/game/ContactMediator.js"></script>
     <script type="text/javascript" src="js/game/b2BodyFactory.js"></script>
     <script type="text/javascript" src="js/game/Scene.js"></script>
     <script type="text/javascript" src="js/game/TitleScene.js"></script>
@@ -91,7 +92,6 @@
     <script type="text/javascript" src="js/game/GameObject.js"></script>
     <script type="text/javascript" src="js/game/Player.js"></script>
     <script type="text/javascript" src="js/game/Building.js"></script>
-    <script type="text/javascript" src="js/game/ContactListener.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
 
