Clean up, add ground

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <script type="text/javascript" src="js/game/TitleScene.js"></script>
     <script type="text/javascript" src="js/game/GameScene.js"></script>
     <script type="text/javascript" src="js/game/GameObject.js"></script>
+    <script type="text/javascript" src="js/game/Ground.js"></script>
     <script type="text/javascript" src="js/game/Player.js"></script>
     <script type="text/javascript" src="js/game/Building.js"></script>
 
