Clean up the building generation. Image loading needs more work.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <script type="text/javascript" src="js/game/Ground.js"></script>
     <script type="text/javascript" src="js/game/Player.js"></script>
     <script type="text/javascript" src="js/game/Building.js"></script>
-    <script type="text/javascript" src="js/game/BuildingGenerator.js"></script>
+    <script type="text/javascript" src="js/game/BuildingManager.js"></script>
+    <script type="text/javascript" src="js/game/GroundManager.js"></script>
 
     <script type="text/javascript" src="js/MashaAdventure.js"></script>
 
