--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/canvas.css">
 
     <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
